# cohere-hackathon

./: .gitignore  README.md  changeTone.ipynb  download.sh  pyproject.toml  unravel.py
cohere-hackathon/: __init__.py  unravel.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  album.js  index.js
