[tool.poetry]
name = "cohere-hackathon"
version = "0.1.0"
description = "application developed for semcomp 26's hackathon"
authors = ["gabrielvictorcf <gabrielvcf@outlook.com>"]
license = "MIT"
packages = [{include = "cohere-hackathon"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
cohere = "^4.31"
lyricsgenius = "^3.0.1"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unravel = "cohere-hackathon.unravel:main"